--- a/src/components/navbar/index.css
+++ b/src/components/navbar/index.css
@@ -25,7 +25,7 @@
 
 /* Color/shape of close button cross */
 .bm-cross {
-  background: #bdc3c7;
+  background: black;
 }
 
 /*
@@ -39,9 +39,10 @@
 
 /* General sidebar styles */
 .bm-menu {
-  background: #05213d;
+  background: #ffffff;
   padding: 2.5em 1.5em 0;
   font-size: 1.15em;
+  border-left: 3px solid black;
 }
 
 /* Morph shape necessary with bubble or elastic */
@@ -51,7 +52,7 @@
 
 /* Wrapper for item list */
 .bm-item-list {
-  color: #b8b7ad;
+  color: #000000;
   text-decoration: none;
   font-size: 30px;
 
@@ -62,7 +63,7 @@
 .bm-item {
   display: inline-block;
   margin-bottom: 1em;
-  color: #b8b7ad;
+  color: #000000;
   text-decoration: none;
 }
 
