--- a/src/components/navbar/index.css
+++ b/src/components/navbar/index.css
@@ -40,8 +40,7 @@
 /* General sidebar styles */
 .bm-menu {
   background: #ffffff;
-  padding: 2.5em 1.5em 0;
-  font-size: 1.15em;
+  padding: 2.5em 0em 0;
   border-left: 3px solid black;
 }
 
@@ -55,16 +54,22 @@
   color: #000000;
   text-decoration: none;
   font-size: 30px;
-
-  padding: 0.8em;
+  width: 100%;
 }
 
 /* Individual item */
 .bm-item {
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-bottom: 1em;
   color: #000000;
+  font-weight: 400;
+  margin-left: 10px;
+  font-size: 42px;
+  height: 50px;
   text-decoration: none;
+  color: black;
 }
 
 /* Styling of overlay */
